[project]
name = "sde-priors"
version = "0.0.0"
description = "SDE function priors"
authors = [
    {name = "Justin T Chiu", email = "chiu.justin.t@gmail.com"},
]
dependencies = [
    "diffrax",
    "equinox",
    "jax",
    "jaxtyping",
    "jaxlib",
    "seaborn",
]
requires-python = "~=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = [
    "pdm-backend",
    "numpy",
    "setuptools",
]
build-backend = "pdm.backend"

